--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.3.1",
     "@astrojs/tailwind": "^6.0.2",
+    "@kotosha/astro-gist": "^1.0.0",
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.10.1",
+    "katex": "^0.16.22",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
     "tailwindcss": "^4.1.11",
     "toml": "^3.0.0"
   },
