Updated package.json to fix buil issue

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "type": "module",
   "version": "0.0.1",
   "packageManager": "pnpm@10.6.0",
+  "engines": {
+    "node": "22.x"
+  },
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -27,3 +30,4 @@
     "@types/node": "^24.0.15"
   }
 }
+
