--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sgdp",
   "type": "module",
   "version": "0.0.1",
-  "packageManager": "pnpm@10.6.0",
+  "packageManager": "pnpm@8.15.5",
   "engines": {
     "node": "22.x"
   },
@@ -21,6 +21,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.12.0",
     "katex": "^0.16.22",
+    "pnpm": "8.15.5",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
     "tailwindcss": "^4.1.11",
@@ -30,4 +31,3 @@
     "@types/node": "^24.0.15"
   }
 }
-
