Fixed linkedin link

--- a/content/configuration.toml
+++ b/content/configuration.toml
@@ -117,7 +117,7 @@ ctaUrl = "/projects"
 name = "pupperemeritus"
 githubProfile = "https://github.com/pupperemeritus"
 twitterProfile = "https://twitter.com/pupperemeritus9"
-linkedinProfile = "https://linkedin.com/sri-guru-datta-p"
+linkedinProfile = "https://linkedin.com/in/sri-guru-datta-p"
 
 [_.texts]
 articlesName = "Articles"
