--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "toml": "^3.0.0"
   },
   "devDependencies": {
-    "@types/node": "^24.0.15"
+    "@types/node": "^24.0.15",
+    "prettier": "3.6.2",
+    "prettier-plugin-astro": "0.14.1",
+    "prettier-plugin-tailwindcss": "0.6.14"
   }
 }
